<resources>
    <string name="app_name">smartLOCK</string>

    <!-- splash -->
    <string name="splash_content_description_logo">Splash logo</string>

    <!-- authentication -->
    <string name="auth_error">Authentication failed. Please try again.</string>
    <string name="auth_registration_error">Authentication failed. Please try again.</string>

    <!-- drawer -->
    <string name="drawer_opened_tag" translatable="false">Open</string>
    <string name="drawer_closed_tag" translatable="false">Closed</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_no_locks_info">You haven\'t got any defined locks.</string>
    <string name="drawer_add_lock">+ Add lock</string>

    <string name="drawer_content_description_avatar">User avatar</string>
    <string name="drawer_content_description_lock_icon">Lock icon</string>

    <!-- access log -->
    <string name="log_last_access">Last access:</string>
    <string name="log_content_description_date">Last access date icon</string>
    <string name="log_content_description_time">Last access time icon</string>
    <string name="log_content_description_arrow_up">Swipe up to see log icon</string>

    <!-- access list -->
    <string name="acl_type_administrator">Lock administrator</string>
    <string name="acl_type_limited">Limited access</string>
    <string name="acl_grant_email_hint">Email of user to grant access</string>

</resources>
