<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="me.michalkasza.smartlock.ui.main.MainViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_primary"
        android:tag="@string/tag_menu"
        android:padding="32dp">

        <!-- header -->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_avatar_container"
            android:layout_width="@dimen/drawer_avatar_size"
            android:layout_height="@dimen/drawer_avatar_size"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="@dimen/drawer_avatar_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/drawer_avatar_size"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/drawer_content_description_avatar"
                android:src="@drawable/placeholder_avatar" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{ viewModel.userObservable.name + viewModel.userObservable.surname }"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toTopOf="@+id/tv_user_role"
            app:layout_constraintStart_toEndOf="@+id/cv_avatar_container"
            app:layout_constraintTop_toTopOf="@+id/cv_avatar_container"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_user_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@+id/cv_avatar_container"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <!-- menu -->
        <LinearLayout
            android:id="@+id/ll_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tv_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_avatar_container">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_locks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                navRecyclerAdapter="@{ viewModel.adapterObservable }"/>
                <!--android:visibility="@{ viewModel.adapterOvservable.get().itemCount==0 ? View.GONE : View.VISIBLE, default = gone }"/>-->
            <TextView
                android:id="@+id/tv_no_locks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_no_locks_info"
                android:textColor="@color/text_white"/>
                <!--android:visibility="@{ viewModel.adapterOvservable.get().itemCount==0 ? View.VISIBLE : View.GONE, default = gone }"/>-->
        </LinearLayout>

        <!-- footer -->
        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/drawer_content_description_lock_icon"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toTopOf="@+id/iv_logout"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="@+id/iv_settings"
            app:layout_constraintStart_toEndOf="@+id/iv_settings"
            app:layout_constraintTop_toTopOf="@+id/iv_settings"
            android:text="@string/drawer_settings" />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/drawer_content_description_lock_icon"
            android:src="@drawable/ic_logout"
            android:tint="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="@+id/iv_logout"
            app:layout_constraintStart_toEndOf="@+id/iv_logout"
            app:layout_constraintTop_toTopOf="@+id/iv_logout"
            android:onClick="@{ viewModel::logoutClicked }"
            android:text="@string/drawer_logout" />
    </android.support.constraint.ConstraintLayout>
</layout>