<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="me.michalkasza.smartlock.ui.lock.status.StatusViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- LOCK status -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="@dimen/lock_status_switch_size"
            android:layout_height="@dimen/lock_status_switch_size"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_lock_status"
            android:thumb="@android:color/transparent"
            android:checked="@{ viewModel.currentLock.status, default=false }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:track="@android:color/transparent"
            android:onCheckedChanged="@{ (switch, checked) -> viewModel.lockStatusChanged(checked) }"/>

        <!-- LAST ACCESS info -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottomsheet_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_primary_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_last_access_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/log_last_access"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_last_access_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{ viewModel.currentLock.lastAccessUser }"
                android:textColor="@color/text_accent"
                android:textSize="@dimen/text_medium"
                app:layout_constraintBottom_toBottomOf="@+id/tv_last_access_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_last_access_info"
                app:layout_constraintTop_toTopOf="@+id/tv_last_access_info" />

            <ImageView
                android:id="@+id/iv_access_date_info"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/log_content_description_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_access_info"
                app:srcCompat="@drawable/ic_calendar" />

            <ImageView
                android:id="@+id/iv_access_time_info"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/log_content_description_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_access_date_info"
                app:srcCompat="@drawable/ic_time" />

            <TextView
                android:id="@+id/tv_access_date"
                timestampExtractDate="@{ viewModel.currentLock.lastAccessTime }"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_white"
                app:layout_constraintBottom_toBottomOf="@+id/iv_access_date_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_access_date_info"
                app:layout_constraintTop_toTopOf="@+id/iv_access_date_info" />

            <TextView
                android:id="@+id/tv_access_time"
                timestampExtractHours="@{ viewModel.currentLock.lastAccessTime }"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/text_white"
                app:layout_constraintBottom_toBottomOf="@+id/iv_access_time_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_access_time_info"
                app:layout_constraintTop_toTopOf="@+id/iv_access_time_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>